# kirodex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TASKS.md  activity.md  agents-lock.json  downloads.json  index.html  package.json  tsconfig.json  vite.config.ts
.claude/agents/: rust-architecture-reviewer.md  rust-senior-engineer-reviewer.md
.gemini/agents/: rust-architecture-reviewer.md
.github/workflows/: ci.yml  release.yml
.kiro/agents/: rust-architecture-reviewer.json  rust-senior-engineer-reviewer.json
.kiro/steering/: build-validation.md  kirodex-rules.md  rust-crates.md  tauri-patterns.md
.opencode/agents/: rust-architecture-reviewer.md
.plans/: escape-immediate-pause.md  performance-optimization.md
data/: github-releases-2026-04-13.csv  github-releases-2026-04-14.csv  github-releases-2026-04-15.csv  github-releases-2026-04-16.csv  github-releases-2026-04-17.csv
docs/: pr-guidelines.md
src/: tailwind.css
src-tauri/: Cargo.toml  Kirodex.entitlements  activity.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: acp.rs  error.rs  fs_ops.rs  git.rs  kiro_config.rs  mod.rs  pty.rs  settings.rs
src/renderer/: App.tsx  main.tsx
src/renderer/components/: AppHeader.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GitActionsGroup.tsx  Onboarding.tsx  OnboardingAuthSection.tsx  OnboardingCliSection.tsx  OnboardingSetupStep.tsx  OnboardingThemeStep.tsx  OnboardingWelcomeStep.tsx  OpenInEditorGroup.tsx  Playground.tsx  (+5 more)
website/: features.html  index.html
(+108 files in other folders)
