[package]
name = "kirodex"
version = "0.1.0"
edition = "2021"

[lib]
name = "kirodex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kirodex"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
agent-client-protocol = "0.10.4"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
